# bulky

./: .gitignore  Dockerfile  README.md  app.py  arq_client.py  atlas.hcl  docker-compose.yaml  file_download_client.py  gen_upload_data.py  pyproject.toml  requirements.txt  schema.sql  seed.py  xlsx.py  xlsx2.py
bulky/: app.py  worker.py
migrations/: 20240402224848_initial.sql  20240726013818_add_task.sql  20240806095043_add_async_task.sql  20240806095203_add_async_task.sql  atlas.sum
scripts/: csvs.py  xlsx2.py
